--- a/config.example.json
+++ b/config.example.json
@@ -1,6 +1,10 @@
 {
     "db_file": "<path-to-sqlite-db-file>",
-    "llm_api_key": "<api_key>",
+    "llm_api_keys": {
+        "ali_qwen_plus": "<api_key>",
+        "ali_qwen_turbo": "<api_key>",
+        "spark_lite": "<api_key>"
+    },
     "wx": {
         "token": "<token>"
     }
